--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "aws-amplify": "^4.3.15",
     "next": "latest",
+    "next-auth": "^4.2.1",
+    "next-themes": "^0.1.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-tsparticles": "^1.42.0",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
+    "prettier": "2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
