--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "aws-amplify": "^4.3.15",
+    "axios": "^0.21.4",
+    "newsapi": "^2.4.1",
     "next": "latest",
     "next-auth": "^4.2.1",
     "next-themes": "^0.1.1",
