--- a/.env
+++ b/.env
@@ -17,3 +17,8 @@ EMAIL_SERVER_PORTNO =
 EMAIL_FROM =
 NEXTAUTH_URL = http://localhost:3000/
 DATABASE_URL = sqlite://localhost/:memory:
+
+NEXT_PUBLIC_CLIENT_SECRET=826c62f4ec6344258f58cf59def7bf1a
+NEXT_PUBLIC_CLIENT_ID=205e96a2f46e466d934f993d46e6f610
+
+JWT_SECRET= encrypted
