--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "aws-amplify": "^4.3.15",
     "axios": "^0.21.4",
     "newsapi": "^2.4.1",
@@ -17,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-tsparticles": "^1.42.0",
+    "spotify-web-api-node": "^5.0.2",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
